# ZiaAPI

./: .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
api/includes/: ziapi.hpp
api/includes/exception/: Exception.hpp  ServerError.hpp
api/includes/header/: Header.hpp  HeaderNormalizer.hpp  HeaderWrapper.hpp
api/includes/module/: AModule.hpp  IModule.hpp  IPostRequestModule.hpp  IPostResponseModule.hpp  IPreRequestModule.hpp  IPreResponseModule.hpp
api/includes/request/: ConstRequest.hpp  Request.hpp
api/includes/response/: Content.hpp  Response.hpp  Status.hpp
api/includes/session/: Session.hpp
api/includes/utils/: TextUtils.hpp
api/sources/: main.cpp
api/sources/exception/: Exception.cpp  ServerError.cpp
api/sources/header/: Header.cpp  HeaderNormalizer.cpp  HeaderWrapper.cpp
api/sources/modules/: AModule.cpp
api/sources/request/: ConstRequest.cpp  Request.cpp
api/sources/response/: Content.cpp  Response.cpp  Status.cpp
api/sources/session/: Session.cpp
api/sources/utils/: TextUtils.cpp
example/: ModExample.cpp  ModExample.hpp
